# xpc-ct

./: .gitignore  README.md  pyproject.toml
dev_tools/aeferretti/: README.txt
src/xpc_ct/: forward.py  materials.py  metrics.py  nist_xcom.py  optimize.py  phantoms.py  phase_retrieval.py  plotting.py  tomography.py
