[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xpc-ct"
version = "0.1.0"
description = "Propagation-based x-ray phase contrast CT simulation and reconstruction tools"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "jax",
    "matplotlib",
    "xraydb",
    "flax",
    "optax",
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]
